# Bloom

./: .clang-tidy  .clangd  .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  PKGBUILD  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  com.github.crowquillx.Bloom.yml  com.github.yourname.Bloom.json  dev.json  flake.nix  installer.nsi  player_backend_refactor.md  shell.nix  stable.json
src/: CMakeLists.txt  main.cpp
src/config/: version.h.in
src/core/: ApplicationInitializer.cpp  ApplicationInitializer.h  ServiceLocator.cpp  ServiceLocator.h
src/models/: MediaModels.cpp  MediaModels.h
src/network/: AuthenticationService.cpp  AuthenticationService.h  HttpTransport.cpp  HttpTransport.h  LibraryService.cpp  LibraryService.h  MediaSegmentProviderService.cpp  MediaSegmentProviderService.h  NextEpisodeResolver.cpp  NextEpisodeResolver.h  PlaybackService.cpp  PlaybackService.h  SeerrService.cpp  SeerrService.h  SessionManager.cpp  SessionManager.h  SessionService.cpp  SessionService.h  Types.cpp  Types.h
src/player/: MpvVideoItem.cpp  MpvVideoItem.h  PlayerController.cpp  PlayerController.h  PlayerProcessManager.cpp  PlayerProcessManager.h  ThemeSongManager.cpp  ThemeSongManager.h  TrickplayProcessor.cpp  TrickplayProcessor.h
src/player/backend/: ExternalMpvBackend.cpp  ExternalMpvBackend.h  IPlayerBackend.h  LinuxLibmpvOpenGLBackend.cpp  LinuxMpvBackend.cpp  LinuxMpvBackend.h  MpvEmbeddedShaderUtils.cpp  MpvEmbeddedShaderUtils.h  MpvNodeUtils.h  PlayerBackendFactory.cpp  PlayerBackendFactory.h  WindowsLibmpvHwndBackend.cpp  WindowsLibmpvHwndBackend.h  WindowsMpvBackend.cpp  WindowsMpvBackend.h
src/profiles/: BloomProfile.cpp  BloomProfile.h  BloomProfileRepository.cpp  BloomProfileRepository.h
src/providers/: IArtworkProvider.h  IPlaybackProvider.h  IProviderAdapter.h  IProviderAuthenticator.h  IProviderRequestFactory.h  ServerConnection.cpp  ServerConnection.h
src/providers/jellyfin/: JellyfinArtworkProvider.cpp  JellyfinArtworkProvider.h  JellyfinAuthenticator.cpp  JellyfinAuthenticator.h  JellyfinModelMapper.cpp  JellyfinModelMapper.h  JellyfinPlaybackProvider.cpp  JellyfinPlaybackProvider.h  JellyfinProviderAdapter.h  JellyfinRequestFactory.cpp  JellyfinRequestFactory.h
src/resources/: fonts.qrc  images.qrc  mpv-shaders.qrc  scripts.qrc  sounds.qrc  windows-dpi-unaware.manifest  windows-icon.rc
src/resources/fonts/: LICENSE
src/resources/linux/: com.github.bloom.desktop  com.github.crowquillx.Bloom.desktop  com.github.crowquillx.Bloom.metainfo.xml
src/resources/mpv-fonts/: LICENSE-GandhiSans.txt
src/resources/scripts/: modernx.lua  (+1 more)
src/security/: CredentialStore.cpp  CredentialStore.h  ISecretStore.h  SecretStoreFactory.cpp  SecretStoreFactory.h  SecretStoreLinux.cpp  SecretStoreLinux.h  SecretStoreWindows.cpp  SecretStoreWindows.h
src/test/: MockAuthenticationService.cpp  MockAuthenticationService.h  MockLibraryService.cpp  MockLibraryService.h  TestModeController.cpp  TestModeController.h
src/ui/: A11yButton.qml  AccessibilityHelpers.qml  ActiveSessionsScreen.qml  EmbeddedPlaybackOverlay.qml  EpisodeSelection.js  FontLoader.cpp  FontLoader.h  HeroBanner.qml  HeroBannerLayoutHost.qml  HeroBannerProvider.qml  HomeScreen.qml  Icons.qml  ImageCacheProvider.cpp  ImageCacheProvider.h  LibraryScreen.qml  LoginScreen.qml  Main.qml  MediaInfoPanel.qml  MediaProgressBar.qml  MediaSourceSelectionDialog.qml  MetadataChip.qml  MovieDetailsView.qml  MpvProfileEditor.qml  PersonCard.qml  RatingMetadataChip.qml  ResponsiveLayoutManager.cpp  ResponsiveLayoutManager.h  RetryButton.qml  RoundedImage.qml  ScreensaverController.cpp  ScreensaverController.h  ScreensaverOverlay.qml  ScrollingCardLabel.qml  SearchResultCard.qml  SearchScreen.qml  SeasonView.qml  SecondaryActionButton.qml  SeerrComboBox.qml  SeerrRequestDialog.qml  SeriesDetailsView.qml  (+16 more)
src/updates/: GitHubReleaseUpdateProvider.cpp  GitHubReleaseUpdateProvider.h  IUpdateApplier.cpp  IUpdateApplier.h  IUpdateProvider.h  UpdateService.cpp  UpdateService.h  UpdateTypes.h  WindowsNsisUpdateApplier.cpp  WindowsNsisUpdateApplier.h
src/utils/: AudioOutputRouter.cpp  AudioOutputRouter.h  BloomLogging.cpp  BloomLogging.h  CacheMigrator.cpp  CacheMigrator.h  ConfigManager.cpp  ConfigManager.h  DetailListHelper.h  DetailMetadataHelper.h  DetailViewCache.cpp  DetailViewCache.h  DisplayManager.cpp  DisplayManager.h  ExternalRatingsHelper.h  GpuMemoryTrimmer.cpp  GpuMemoryTrimmer.h  InputBindingManager.cpp  InputBindingManager.h  InputModeManager.cpp  InputModeManager.h  LibraryCacheStore.cpp  LibraryCacheStore.h  Logger.cpp  Logger.h  LoggingConfig.cpp  LoggingConfig.h  MpvArgFilter.cpp  MpvArgFilter.h  SidebarSettings.cpp  SidebarSettings.h  SystemPowerController.cpp  SystemPowerController.h  TrackPreferencesManager.cpp  TrackPreferencesManager.h
src/viewmodels/: BaseViewModel.cpp  BaseViewModel.h  LibraryViewModel.cpp  LibraryViewModel.h  MovieDetailsViewModel.cpp  MovieDetailsViewModel.h  SeriesDetailsViewModel.cpp  SeriesDetailsViewModel.h  UpNextRecommendationsViewModel.cpp  UpNextRecommendationsViewModel.h
tests/: BaseViewModelTest.cpp  BloomProfileRepositoryTest.cpp  CMakeLists.txt  CanonicalModelsTest.cpp  ConfigManagerThemeTest.cpp  ConnectionPersistenceTest.cpp  EpisodeSelectionScriptTest.cpp  InputBindingManagerTest.cpp  LibraryCacheStoreTest.cpp  LibraryItemQueryTest.cpp  LibraryViewModelCanonicalTest.cpp  LoggingConfigTest.cpp  MediaSegmentProviderServiceTest.cpp  NextEpisodeResolverTest.cpp  PlayerBackendFactoryTest.cpp  PlayerControllerAutoplayContextTest.cpp  PlayerControllerPlaybackStateStub.cpp  ProviderTransportTest.cpp  SeriesDetailsCacheTest.cpp  SimilarItemsRetryTest.cpp  TrackPreferencesManagerTest.cpp  UpNextRecommendationsViewModelTest.cpp  UpdateServiceTest.cpp  VisualRegressionTest.cpp
tests/captures/: .gitignore
tests/contracts/: provider-contracts.json  provider_contracts_test.py  run_live_contracts.py  validate_contracts.py
tests/diffs/: .gitignore
tests/fixtures/: README.md  test_library.json
tests/golden/: .gitkeep
(+85 files in other folders)
